test/bad/generics/def08.px

func f<A,B>(x: A): B def
    return f(x)

print f(false)
